# Copilot_Prompt_Refiner

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
samples/: case_example.json  copilot_log_example.json  mcp.external.example.json  mcp.external.json  mcp.remote.http.example.json  payload.resume_assistant.context.json  system_prompt.txt
scripts/: run_mcp_server.sh  run_mcp_server_http.sh
src/copilot_prompt_refiner/: __init__.py  cli.py  config.py  mcp_server.py  models.py  pipeline.py
src/copilot_prompt_refiner/agents/: __init__.py  base.py  judge_agent.py  microsoft_agent_framework.py  refine_agent.py
src/copilot_prompt_refiner/agents/judge/: __init__.py  agent.py  definition.py  tools.py
src/copilot_prompt_refiner/agents/refine/: __init__.py  agent.py  definition.py  tools.py
src/copilot_prompt_refiner/evaluators/: __init__.py  base.py  heuristic.py  maf_judge.py
src/copilot_prompt_refiner/ingest/: __init__.py  copilot.py
tests/: test_azure_runtime_ssl.py  test_mcp_payload_compat.py  test_payload_ingest.py  test_pipeline.py
